welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: illegal start of simple expression
    if(var message ="A"){
       ^BDRBuggle:17: error: ')' expected but '}' found.
  }
  ^