welcome.lessons.welcome.bdr.BDR.scala.code
var fin=false
while (!fin){
  if (estSurMessage()){
    var message=litMessage()
    if(var message ="A"){
      avance()
    }
    else if(var message ="B"){
      		avance()
      		avance()
    		}
    	else if(var message ="C"){
      			avance()
      			avance()
      			avance()
    			}
  }
  else 
    fin=true
  
}	